src/styles/modules/project-listing.less
/* -----------------
Standard Project Listing
----------------- */
.project-list-item {

    .client-logo {
        display: table-cell;
        vertical-align: middle;
        height: 100%;
    }

    .project-name {
        margin: 0px 0px 4px 0px;
        display: inline-block;
    }

    .date {
        color: #999;
        font-size: 12px;
        margin-left: 7px;
    }

    .link {
        margin: 0px 0px 8px 0px;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;

        .offline-message {
            color: #ECBCBE;
        }
    }
    
    .description {
        margin: 0px 0px 15px 0px;
    }

    .screenshots-link {
        background: @teal;
        color: #fff;
        border: 0px;
    }

    .project-technology {
        padding-left: 20px;
    }

    .note-heading {
        margin-bottom: 4px;
        font-weight: bold;
    }

    .screenshot-thumb {
        margin: 0px 15px 20px 25px;
        float: right;
        .boxshadow(2px, 2px, 6px, 0px, #c0c0c0);

        img {
            width: auto;
            height: auto;
            .opacity(0.8);
        }

        &.screenshot-thumb-clickable {
            cursor: pointer;

            .click-icon, .click-icon-hover {
                width: 220px;
                height: 128px;
                display: block;
                position: absolute;
                z-index: 9;
            }
            .click-icon-hover {
                display: none;
            }
            &:hover {
                img {
                    .opacity(1);
                }
                .click-icon {
                    display: none;
                }
                .click-icon-hover {
                    display: block;
                }
            }
        }
    }

    &.is-not-clickable {
        .screenshot-thumb {
            cursor: inherit;

            .click-icon {
                display: none;
            }

            img {
                .opacity(1);
            }
        }
    }

    @media screen and (max-width: @screen-xs-max) { // Phone
        .client-logo {
            display: none;
        }
        .screenshot-thumb {
            float: left;
            margin: 10px 0px 20px 0px;
        }
        .project-summary {
            .project-name, .date, .link {
                clear: both;
                float: left;
                width: 100%;
            }
            .date {
                margin: 0px 0px 3px 0px;
            }
        }
        .description {
            display: inline-block;
        }
        .btn {
            margin: 0px 0px 15px 0px;
        }
    }

    @media screen and (min-width : 500px) and (max-width: @screen-sm-max) { // Phone Landscape/Tablet
        .client-logo {
            display: none;
        }
        .screenshot-thumb {
            float: left;
            margin: 10px 0px 20px 0px;
        }
        .project-summary {
            float: left;
            width: 45%;
            padding-left: 20px;
            margin-top: 10px;

            .project-name, .date, .link {
                clear: both;
                float: left;
                width: 100%;
            }
            .date {
                margin: 0px 0px 3px 0px;
            }
        }
        .description {
            float: left;
            clear: both;
            width: 100%;
        }
        .btn {
            margin: 15px 0px 0px 20px;
        }
    }

    @media screen and (min-width : @screen-sm-min) and (max-width: @screen-sm-max) { // Tablet
        .project-summary {
            width: 60%;
        }
    }

    @media screen and (min-width : @screen-md-min) and (max-width: @screen-md-max) { // Small Desktop/Tablet Landscape
        .project-summary {
            .date {
                display: block;
                margin-left: 0px;
                margin-bottom: 3px;
            }
        }
        .screenshot-thumb {
            margin-bottom: 15px;
        }
        .client-logo img {
            width: 95%;
            height: auto;
        }
    }


/* -----------------
Polaroid Project Listing
----------------- */
    &.polaroid {
        text-align: center;
        cursor: pointer;

        .screenshot {
            max-width: 100%;
            height: 128px;
            overflow: hidden;
            .opacity(0.8);
        }

        &:hover {
            .screenshot {
                .opacity(1.0);
            }
        }

        .project-name {
            text-align: center;
            width: 100%;
            margin: 10px 0px 0px 0px;
        }

        .link {
            text-align: center;
            font-size: 13px;
            
            width: 85%;
            display: block;
            margin: 3px auto 0px auto;

            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;

            &:hover {
                text-decoration: none;
            }
        }

        .more-details {
            margin: 6px auto 0px auto;
            display: block;
        }

        @media screen and (max-width: @screen-xs-max) { // Phone
            margin-bottom: 30px;
            .link {
                float: none;
            }
        }

        @media screen and (min-width : @screen-md-min) and (max-width: @screen-md-max) { // Small Desktop/Tablet Landscape
            min-height: 248px;
            .btn {
                position: absolute;
                bottom: 10px;
                left: 70px;
            }
        }
    }

}

@media screen and (min-width : 500px) and (max-width: @screen-sm-min) { // Phone (Landscape)
    .project-column {
        width: 50%;
        float: left;
    }
}

@media screen and (min-width: @screen-sm-min) and (max-width: @screen-sm-max) { // Tablet
    .project-row {
        margin-bottom: 0px !important;
    }
    .project-column {
        margin-bottom: 25px;
    }
}


/* -----------------
Project Details Popup
----------------- */
.project-modal-header {
    h3 {
        margin: 0px;
        display: inline-block;
    }
    .date {
        padding-left: 10px;
    }
    .link {
        margin-left: 10px;
    }
    .offline-message {
        color: #ECBCBE;
    }
    .description {
        margin-top: 6px;
    }

    @media screen and (max-width: @screen-xs-max) { // Phone
        .link {
            margin-left: 0px;
            margin-top: 5px;
            display: inline-block;
            width: 100%;
        }
    }
}
.project-modal-body {
    overflow: hidden;

    .single-screenshot {
        text-align: center;
        img {
            max-width: 100%;
        }
    }
}

